2010-09-27  Bernd Schmidt  <bernds@codesourcery.com>

	* gas/tic6x/got-reloc.s: New test.
	* gas/tic6x/got-reloc.d: New test.

2010-09-27  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/s390.exp: Run the zarch-z196 test.
	* gas/s390/zarch-z196.d: Add new instructions.
	* gas/s390/zarch-z196.s: Likewise.
	* gas/s390/zarch-z9-109.d: Likewise.
	* gas/s390/zarch-z9-109.s: Likewise.

2010-09-27  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/esa-g5.d: Adjust serveral instructions.
	* gas/s390/esa-reloc.d: Likewise.
	* gas/s390/esa-z990.d: Likewise.
	* gas/s390/zarch-reloc.d: Likewise.
	* gas/s390/zarch-z10.d: Likewise.
	* gas/s390/zarch-z9-ec.d: Likewise.
	* gas/s390/zarch-z900.d: Likewise.

2010-09-27  Tejas Belagod  <tejas.belagod@arm.com>

	* gas/arm/vldr.s: New test for pc-relative VLDR disassembly comment.
	* gas/arm/vldr.d: Likewise.
	* gas/arm/vstr-bad.s: New test for PC-relative VSTR.
	* gas/arm/vstr-thumb-bad.l: Likewise.
	* gas/arm/vstr-thumb-bad.d: Likewise.
	* gas/arm/vstr-arm-bad.l: Likewise.
	* gas/arm/vstr-arm-bad.d: Likewise.

2010-09-23  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* gas/arm/armv7-a+virt.d: New test.
	* gas/arm/armv7-a+virt.s: Likewise.
	* gas/arm/attr-march-all.d: Update for Virtualization Extensions.
	* gas/arm/attr-march-armv7-a+sec+virt.d: New test.
	* gas/arm/attr-march-armv7-a+virt.d: Likewise.

2010-09-23  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* gas/arm/armv7-a+idiv.d: New test.
	* gas/arm/armv7-a+idiv.s: Likewise.
	* gas/arm/attr-march-all.d: Update for Integer divide extension.
	* gas/arm/attr-march-armv7-a+idiv.d: New test.

2010-09-23  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* gas/arm/archv6s-m-bad.d: New test.
	* gas/arm/archv6s-m-bad.l: Likewise.
	* gas/arm/archv6s-m.d: Likewise.
	* gas/arm/archv6s-m.s: Likewise.
	* gas/arm/attr-march-armv6-m+os.d: Likewise.
	* gas/arm/attr-march-armv6s-m.d: Likewise.
