@@ -1,3 +1,9 @@
+2010-09-29  Alan Modra  <amodra@gmail.com>
+
+	* lib/gas-defs.exp (is_elf_format): Merge with binutils and ld versions.
+	(is_aout_format): Copy from ld testsuite.
+	(is_pecoff_format): Merge with ld version.
+
 2010-09-27  Bernd Schmidt  <bernds@codesourcery.com>
 
 	* gas/tic6x/got-reloc.s: New test.
